[package]
name = "serial-tester"
version = "1.0.0"
authors = ["Romain DÉOUX <romain.deoux@flowbird.group>"]
edition = "2021"
description = "Test a serial wire"
repository = "https://bitbucket.org/rdeoux/serial-tester.git"
publish = false

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
nix = "0.26.1"
serialport = "4.2.0"

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"
